--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,13 @@
+
+pluginManagement {
+  repositories {
+    mavenLocal()
+    gradlePluginPortal()
+    maven { url 'https://dl.bintray.com/brambolt/public' }
+  }
+  plugins {
+    id 'com.brambolt.gradle.pluginbuild' version bramboltPluginbuildVersion
+  }
+}
+
 rootProject.name = 'gradle-build'
