brambolt/products/wrench#11: Wrench simplification.

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,8 +6,8 @@ pluginManagement {
     maven { url 'https://dl.bintray.com/brambolt/public' }
   }
   plugins {
-    id 'com.brambolt.gradle.pluginbuild' version bramboltPluginbuildVersion
+    id 'com.brambolt.gradle.build.plugin' version bramboltVersion
   }
 }
 
-rootProject.name = 'gradle-build'
+rootProject.name = 'gradle-build-staging'
