--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,55 @@
+/*
+ * Copyright 2017-2020 Brambolt ehf.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
 plugins {
-  id 'com.brambolt.gradle.pluginbuild' apply false
+  id 'com.brambolt.gradle.build.plugin' apply false
 }
 
-description = 'The build implementation for the other Brambolt libraries.'
+description = 'The Brambolt staging build.'
 group = 'com.brambolt.gradle'
 
 ext {
-  artifactId = 'brambolt-gradle-build'
+  artifactId = 'brambolt-gradle-build-staging'
   developers = [[
     email: 'stefan.sigurdsson@brambolt.com',
     id: 'stefan.sigurdsson@brambolt.com',
     name: 'Stefán Sigurðsson'
   ]]
   inceptionYear = '2017'
+  isOpenSource = true // Enables publishing to plugins.gradle.org and Bintray
   licenses = [[
     id: 'Apache-2.0',
     name: 'The Apache Software License, Version 2.0',
     url: 'http://www.apache.org/licenses/LICENSE-2.0.txt'
   ]]
-  pluginClass = 'com.brambolt.gradle.BuildPlugin'
-  pluginDisplayName = 'Brambolt Build plugin'
-  pluginId = 'com.brambolt.gradle.build'
+  pluginClass = 'com.brambolt.gradle.StagingBuildPlugin'
+  pluginDisplayName = 'Brambolt Staging Build'
+  pluginId = 'com.brambolt.gradle.build.staging'
   pluginTags = [ 'build' ]
-  pluginWebsite = 'https://github.com/brambolt/gradle-build'
-  projectVersion = bramboltProjectVersion
-  vcsUrl = 'https://github.com/brambolt/gradle-build'
+  pluginWebsite = 'https://github.com/brambolt/gradle-build-staging'
+  release = bramboltRelease
+  vcsUrl = 'https://github.com/brambolt/gradle-build-staging'
 }
 
-apply plugin: 'com.brambolt.gradle.pluginbuild'
+apply plugin: 'com.brambolt.gradle.build.plugin'
 
 dependencies {
-  implementation 'com.jfrog.artifactory:com.jfrog.artifactory.gradle.plugin:latest.release'
-  implementation 'com.jfrog.bintray.gradle:gradle-bintray-plugin:latest.release'
-  implementation 'org.ajoberstar.grgit:grgit-gradle:latest.release'
+  implementation "com.brambolt:brambolt-rt:${bramboltVersion}"
+  implementation "com.brambolt.gradle:brambolt-gradle-build-archive:${bramboltVersion}"
+  implementation "com.brambolt.gradle:brambolt-gradle-build-plugin:${bramboltVersion}"
+  implementation "com.brambolt.gradle:brambolt-gradle-velocity:${bramboltVersion}"
+  implementation "com.brambolt.gradle:brambolt-gradle-staging2:${bramboltVersion}"
 }
-
